# vjepa_segmentation

./:   requirements.txt  .gitignore  LICENSE  README.md  colab_vjepa_seg_demo.ipynb
configs/: cihp_linear_fpn.yaml
src/vjepa_seg/: backbone_vjepa.py  evaluate.py  head_linear_fpn.py  inference.py  train.py  utils.py  viz.py
src/vjepa_seg/datasets/: cihp.py
vjepa_segmentation/:   pyproject.toml  pyproject.toml
vjepa_segmentation/configs/: cihp_linear_fpn.yaml
vjepa_segmentation/scripts/: demo_image.sh  demo_video.sh
vjepa_segmentation/src/vjepa_seg/: transforms.py  utils.py
vjepa_segmentation/tests/: test_head_forward.py  test_shapes.py
vjepa_segmentation/vjepa_segmentation/: .gitignore
vjepa_segmentation/vjepa_segmentation/.github/workflows/: ci.yaml
vjepa_segmentation/vjepa_segmentation/scripts/: download_cihp.sh
vjepa_segmentation/vjepa_segmentation/src/vjepa_seg/: train.py
